# qiita-py-api

./: README.md  main.py  pyproject.toml  secrets.json
qiita_py_api/: getArticle.py
qiita_py_sdk/: getArticle.py  main.py
qiita_py_sdk/libs/: getArticle.py
