[tool.poetry]
name = "qiita-py-api"
version = "0.1.0"
description = ""
authors = ["t4t5u0 <ymmtryk0902@gmail.com>"]

[tool.poetry.scripts]
start = "main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
black = { version = "^22.1.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
